--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,6 +1,4 @@
 
-
-
 name: Build and Deploy
 on:
   push:
@@ -10,7 +8,7 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     steps: 
-      - name: Install Dep
+      - name: Install Dependencies
       run: npm install
 
       - name: Build
